--- a/example-site/dragonfly-api/SMTP/smtp.lsp.html
+++ b/example-site/dragonfly-api/SMTP/smtp.lsp.html
@@ -11,7 +11,7 @@
 			link="#376590" vlink="#551A8B" alink="#ffAA28">
 <blockquote>
 <center><h1>smtp.lsp</h1></center>
-<p><a href="index.html">Module index</a></p><br/><h2>Module:&nbsp;smtp.lsp </h2><p>Send mail using SMTP protocol</p>
+<p><a href="index.html">Module index</a></p><br/><h2>Module:&nbsp;smtp.lsp </h2><p>Send mail using SMTP protocol. As of newLISP 10.2 this module comes with newLISP's built-in modules as smtpx.lsp.</p>
 <b>Version: </b>3.0 - Partial rewrite for Dragonfly. Addition attachments, custom port and proper utf8 encoding for subject/message/attachments<br/>
 <b>Version: </b>2.3 - fix in mail-send-body, thanks to Alessandro<br/>
 <b>Version: </b>2.2 - doc changes<br/>
