--- a/example-site/dragonfly-api/smtp/index.html
+++ b/example-site/dragonfly-api/smtp/index.html
@@ -12,7 +12,7 @@
 <blockquote>
 <center><h1>Index</h1></center>
 <a href="smtp.lsp.html"><br/><h2>Module:&nbsp;smtp.lsp </h2></a>
-<p>Send mail using SMTP protocol</p>
+<p>Send mail using SMTP protocol. As of newLISP 10.2 this module comes with newLISP's built-in modules as smtpx.lsp.</p>
 <a href="smtp.lsp.html#SMTP_send-mail">send-mail</a>&nbsp; &nbsp; <a href="smtp.lsp.html#SMTP_get-error-text">get-error-text</a>&nbsp; &nbsp; <a href="smtp.lsp.html#SMTP_clear-attachments">clear-attachments</a>&nbsp; &nbsp; <a href="smtp.lsp.html#SMTP_attach-document">attach-document</a>&nbsp; &nbsp; <a href="smtp.lsp.html#SMTP_encode64-widthsafe">encode64-widthsafe</a>&nbsp; &nbsp; <a href="smtp.lsp.html#SMTP_encode64-line">encode64-line</a>&nbsp; &nbsp; 
 <br/><br/><center>- &part; -</center><br/>
 <center><font face='Arial' size='-2' color='#444444'>
