updated to version 0.72

--- a/example-site/dragonfly-api/dragonfly.lsp.html
+++ b/example-site/dragonfly-api/dragonfly.lsp.html
@@ -12,7 +12,7 @@
 <blockquote>
 <center><h1>dragonfly.lsp</h1></center>
 <p><a href="index.html">Module index</a></p><br/><h2>Module:&nbsp;dragonfly.lsp</h2><p>The heart of Dragonfly - A newLISP web framework for rapid web development.</p>
-<b>Version: </b>0.70<br/>
+<b>Version: </b>taoeffect<br/>
 <b>Author: </b>Team Dragonfly 2009<br/>
 <b>Location: </b><a href="http://code.google.com/p/dragonfly-newlisp/">http://code.google.com/p/dragonfly-newlisp/</a><br/>
  <br>This file is the main entry-point of the Dragonfly framework and
